deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cottonmouth
  labels:
    app.kubernetes.io/part-of: cottonmouth
